🎪♦️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Holiday Conversation Guide</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
 
     <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
@@ -17,8 +17,10 @@
   <body>
     <div class="wrapper">
       <div class="content" role="main">
-        <h1 class="title">Check back here on Saturday, December 21st!</h1>
+        <h1 class="title">Holiday Conversation Guide!</h1>
+<!--         <iframe src="https://docs.google.com/document/d/e/2PACX-1vTrRMJU466a0vji-NDDdyapRgz2clxrcPJ78L7QVWAXTjji84BfupCegAX46Y0M8lTyDviFkG8EBPQO/pub?embedded=true"></iframe> -->
       </div>
+      <iframe src="https://docs.google.com/document/d/e/2PACX-1vTrRMJU466a0vji-NDDdyapRgz2clxrcPJ78L7QVWAXTjji84BfupCegAX46Y0M8lTyDviFkG8EBPQO/pub?embedded=true"></iframe>
     </div>
   </body>
 </html>
