--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Holiday Conversation Guide</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- The website JavaScript file -->
-    <script src="/script.js" defer></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
